src/objects/inscor__Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_File_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PDF Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Shipped_Method__c</fullName>
        <label>Legacy Shipped Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Lines__c</fullName>
        <label>Total Invoice Lines</label>
        <summaryForeignKey>inscor__Invoice_Line__c.inscor__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YayPay_Error_Message__c</fullName>
        <label>YayPay Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YayPay_Last_Sync_Date__c</fullName>
        <label>YayPay Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__AWB__c</fullName>
        <label>AWB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Ship_Address_Name__c</fullName>
        <label>Account Ship Address Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Acct__c</fullName>
        <label>Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Billing Contact)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Freight_Charge__c</fullName>
        <formula>inscor__Release__r.inscor__Company_Freight_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Freight Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Invoice_Lines__c</fullName>
        <label>Company Total Invoice Lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Invoice__c</fullName>
        <formula>inscor__Company_Freight_Charge__c +  inscor__Company_Total_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Total Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Lines_Cost__c</fullName>
        <label>Company Total Lines Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Exchange_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Exchange Summary</label>
        <referenceTo>inscor__Customer_Exchange_Summary__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>Invoices (External Comments Available)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Comments_rt__c</fullName>
        <label>Invoice Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Emailed__c</fullName>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Total__c</fullName>
        <label>Invoice Total - RETIRED</label>
        <summarizedField>inscor__Invoice_Line__c.inscor__Price__c</summarizedField>
        <summaryForeignKey>inscor__Invoice_Line__c.inscor__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Value__c</fullName>
        <label>Total Invoice Lines</label>
        <summarizedField>inscor__Invoice_Line__c.inscor__Extended_Price__c</summarizedField>
        <summaryForeignKey>inscor__Invoice_Line__c.inscor__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>inscor__Lease__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Margin_Percent__c</fullName>
        <formula>( inscor__Invoice_Value__c - inscor__Total_Lines_Cost__c ) / inscor__Invoice_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Margin__c</fullName>
        <formula>inscor__Invoice_Value__c - inscor__Total_Lines_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Port_Dest__c</fullName>
        <label>Port/Dest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ready_To_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>inscor__Release__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Terms__c</fullName>
        <label>Ship Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Shipping_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Shipped_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipped Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Street__c</fullName>
        <label>Street</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Invoice__c</fullName>
        <formula>inscor__Invoice_Value__c + inscor__Freight_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Lines_Cost__c</fullName>
        <label>Total Lines Cost</label>
        <summarizedField>inscor__Invoice_Line__c.inscor__Extended_Total_Cost__c</summarizedField>
        <summaryForeignKey>inscor__Invoice_Line__c.inscor__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__of_Pieces__c</fullName>
        <label># of Pieces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Conversion_ID__c</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Acct__c</columns>
        <columns>inscor__Invoice_Date__c</columns>
        <columns>inscor__Invoice_Type__c</columns>
        <columns>inscor__Total_Invoice__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Release__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <columns>inscor__Account_Terms__c</columns>
        <columns>inscor__Shipped_Method__c</columns>
        <columns>inscor__Customer_PO_Number__c</columns>
        <columns>inscor__Billing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__AWB__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__Invoices_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Acct__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Release__c</columns>
        <columns>inscor__Invoice_Date__c</columns>
        <columns>inscor__Invoice_Type__c</columns>
        <columns>inscor__Total_Invoice__c</columns>
        <columns>inscor__Total_Lines_Cost__c</columns>
        <columns>inscor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Invoices - Cancelled</label>
    </listViews>
    <listViews>
        <fullName>inscor__Invoices_Not_Sent</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Invoice_Emailed__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Invoice_Date__c</columns>
        <columns>inscor__Ready_To_Send__c</columns>
        <columns>inscor__Billing_Contact__c</columns>
        <columns>inscor__Total_Invoice__c</columns>
        <columns>inscor__Invoice_Type__c</columns>
        <columns>inscor__Total_Lines_Cost__c</columns>
        <columns>inscor__Release__c</columns>
        <columns>inscor__Invoice_Value__c</columns>
        <columns>inscor__Acct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Invoice_Date__c</field>
            <operation>greaterThan</operation>
            <value>5/16/2021</value>
        </filters>
        <filters>
            <field>inscor__Status__c</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <label>Invoices - Not Sent</label>
    </listViews>
    <listViews>
        <fullName>inscor__Invoices_Ready_to_Send</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Acct__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Invoice_Date__c</columns>
        <columns>inscor__Invoice_Type__c</columns>
        <columns>inscor__Ready_To_Send__c</columns>
        <columns>inscor__Invoice_Emailed__c</columns>
        <columns>inscor__Billing_Contact__c</columns>
        <columns>inscor__Total_Invoice__c</columns>
        <columns>inscor__Invoice_Value__c</columns>
        <columns>inscor__Release__c</columns>
        <columns>inscor__Total_Lines_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/16/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>inscor__Ready_To_Send__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>inscor__Invoice_Emailed__c</field>
            <operation>equals</operation>
        </filters>
        <label>Invoices Queued to Autosend Tonight</label>
    </listViews>
    <listViews>
        <fullName>inscor__Invoices_Sent</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Acct__c</columns>
        <columns>inscor__Ready_To_Send__c</columns>
        <columns>inscor__Invoice_Emailed__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Release__c</columns>
        <columns>inscor__Invoice_Date__c</columns>
        <columns>inscor__Invoice_Type__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Total_Invoice__c</columns>
        <columns>inscor__Invoice_Value__c</columns>
        <columns>inscor__Total_Lines_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Account__c</field>
            <operation>contains</operation>
            <value>aeronaves</value>
        </filters>
        <label>Invoices Sent</label>
    </listViews>
    <nameField>
        <displayFormat>INVC-{0}</displayFormat>
        <label>Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>